[package]
name = "wownow"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A CLI tool to get the current versions of World of Warcraft"
repository = "https://github.com/t-mart/wownow"
documentation = "https://docs.rs/wownow"
homepage = "https://github.com/t-mart/wownow"
keywords = ["world-of-warcraft"]
categories = ["command-line-utilities"]

[dependencies]
chrono = {version = "0.4.34", features = ["serde"]}
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
